# jellyfin-qbittorrent

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  jellyfin-qbittorrent.service  vcpkg.json
src/: Monitor.cpp  Monitor.hpp  main.cpp
